tests/invalid/in_str_non_str/main.py
def run_case() -> None:
    x: int = 5

    y: bool = x in "hello"

if __name__ == "__main__":
    run_case()
